--- a/app/src/main/res/layout/fragment_json.xml
+++ b/app/src/main/res/layout/fragment_json.xml
@@ -4,66 +4,111 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/nameText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Введите имя"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@id/ageText"
+        app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/rightGuideLine"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/name" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ageText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Введите возраст"
+
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@id/addButton"
+        app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameText" />
+        app:layout_constraintStart_toStartOf="@+id/rightGuideLine"
+        app:layout_constraintTop_toBottomOf="@id/nameText">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/age" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/addButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="addUser"
-        android:text="Добавить"
+        android:layout_marginTop="8dp"
+        android:text="@string/add"
         app:layout_constraintBottom_toTopOf="@id/saveButton"
+        app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rightGuideLine"
         app:layout_constraintTop_toBottomOf="@id/ageText" />
 
     <Button
         android:id="@+id/saveButton"
+        style="@style/Widget.Material3.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="save"
-        android:text="Сохранить"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/save"
         app:layout_constraintBottom_toTopOf="@id/list"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/openButton"
+        app:layout_constraintEnd_toStartOf="@+id/openButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintStart_toStartOf="@+id/rightGuideLine"
         app:layout_constraintTop_toBottomOf="@id/addButton" />
 
     <Button
         android:id="@+id/openButton"
+        style="@style/Widget.Material3.Button.TonalButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="open"
-        android:text="Открыть"
-        app:layout_constraintBottom_toTopOf="@id/list"
-        app:layout_constraintLeft_toRightOf="@id/saveButton"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addButton" />
+        android:layout_marginStart="8dp"
+        android:text="@string/open"
+        app:layout_constraintBottom_toBottomOf="@+id/saveButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_weight="2"
+        app:layout_constraintStart_toEndOf="@+id/saveButton"
+        app:layout_constraintTop_toTopOf="@+id/saveButton" />
 
     <ListView
         android:id="@+id/list"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/leftGuideLine"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/rightGuideLine"
         app:layout_constraintTop_toBottomOf="@id/openButton" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/leftGuideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/rightGuideLine"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
